added admin and user windows

--- a/WorkHourProject/WorkHourProject/App.xaml
+++ b/WorkHourProject/WorkHourProject/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:WorkHourProject"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <Color x:Key="Background">#FF111A72</Color>
+
     </Application.Resources>
 </Application>
