--- a/WorkHourProject/WorkHourProject/MainWindow.xaml
+++ b/WorkHourProject/WorkHourProject/MainWindow.xaml
@@ -17,7 +17,7 @@
         <Label x:Name="label" Content="Login" HorizontalAlignment="Left" Margin="222,38,0,0" VerticalAlignment="Top" Height="54" Width="80" Background="#00000000" Foreground="#FFEEE6E6" FontSize="24"/>
         <TextBox x:Name="UsernameTextbox" HorizontalAlignment="Left" Height="23" Margin="196,126,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120" TextInput="UsernameTextBox_TextInput" />
         <Label x:Name="label_Copy" Content="Username" HorizontalAlignment="Left" Margin="196,95,0,0" VerticalAlignment="Top" Height="26" Width="80" Background="#00000000" Foreground="#FFEEE6E6"/>
-        <TextBox x:Name="PasswordTextBox" HorizontalAlignment="Left" Height="23" Margin="196,204,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120" TextInput="PasswordTextBox_TextInput" />
+        <PasswordBox x:Name="PasswordTextBox" HorizontalAlignment="Left" Height="23" Margin="196,204,0,0"   VerticalAlignment="Top" Width="120" TextInput="PasswordTextBox_TextInput" PasswordChar="*" />
         <Label x:Name="label_Copy1" Content="Password" HorizontalAlignment="Left" Margin="196,173,0,0" VerticalAlignment="Top" Height="26" Width="80" Background="#00000000" Foreground="#FFEEE6E6"/>
         <Button x:Name="LoginButton" Content="Login" HorizontalAlignment="Left" Margin="196,257,0,0" VerticalAlignment="Top" Width="75" Click="LoginButton_Click" IsDefault="True"/>
 
